--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/about.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logoWeb.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UzTradeLink</title>
   </head>
